3.nginx_routing/1.loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: mooo
spec:
  replicas: 2
  selector:
    matchLabels: 
        app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec: 
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mooo
spec:
# 이렇게 하면 loadbalancer 가 만들어짐 쿠버네티스 에서 자동으로 만들어 주겠다.
# 우리가 수동으로 할 필요 X
  type: LoadBalancer
  ports: 
  - name: http
    port: 80 # 그냥 port 는 서비스의 포트
    targetPort: 80 # pod 의 containerPort 입력
    # NodePort가 필요하지 않음.
  selector:
    app: my-nginx
